fix logo images
images were too small

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -103,7 +103,7 @@ h2 {
 }
 
 h3 {
-    font-family: "Vollkorn", serif;
+    font-family: "Vollkorn", sans-serif;
     font-size: 20px;
     color: black;
     font-weight: 700;
